5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4414/executions/1635_869.log
== TEST (2019-04-08 15:12:39) 
-- CODE:
p=float(input("preço:"))
print("p")

-- OUTPUT:
p
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:12:47) 
-- CODE:
p=float(input("preço:"))
print(p)

-- OUTPUT:
200.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:13:07) 
-- CODE:
x=float(input("preço:"))
print(p)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(p)
NameError: name 'p' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:13:13) 
-- CODE:
x=float(input("preço:"))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(p)
NameError: name 'p' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:15:42) 
-- CODE:
x=float(input("preço:"))

if(x=>200):
    print(desconto)


-- ERROR:
File "XXXX", line 3
    if(x=>200):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:15:51) 
-- CODE:
x=float(input("preço:"))

if(x==>200):
    print(desconto)


-- ERROR:
File "XXXX", line 3
    if(x==>200):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:16:28) 
-- CODE:
x=float(input("preço:"))

if(x >==200 ):
    print(desconto)


-- ERROR:
File "XXXX", line 3
    if(x >==200 ):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:16:46) 
-- CODE:
x=float(input("preço:"))

if(x>=200 ):
    print(desconto)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(desconto)
NameError: name 'desconto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:20:35) 
-- CODE:
x=float(input("preco:"))
d=x*5//100 
if(x>=200):
    print(d)
else:
	print("sem desconto")
		


-- OUTPUT:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:20:43) 
-- CODE:
x=float(input("preco:"))
d=x*5//100 
if(x>=200):
    print(d)
else:
	print("sem desconto")
		


-- EXECUTION TIME:
0.198111
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
10.0
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
10.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:20:46) 
-- CODE:
x=float(input("preco:"))
d=x*5//100 
if(x>=200):
    print(d)
else:
	print("sem desconto")
		


-- OUTPUT:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:21:18) 
-- CODE:
x=float(input("preco:"))
d=x*5//100 
if(x>=200):
    print(d)
else:
	print("sem desconto")
		


-- OUTPUT:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:21:57) 
-- CODE:
x=float(input("preco:"))
d=x*5//100 
if(x>=200):
    print(x-d)
else:
	print("sem desconto")
		


-- EXECUTION TIME:
0.159772
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:22:00) 
-- CODE:
x=float(input("preco:"))
d=x*5//100 
if(x>=200):
    print(x-d)
else:
	print("sem desconto")
		


-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:22:10) 
-- CODE:
x=float(input("preco:"))
d=x*5//100 
if(x>=200):
    print(x-d)
else:
	print("sem desconto")
		


-- EXECUTION TIME:
0.182148
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:22:14) 
-- CODE:
x=float(input("preco:"))
d=x*5//100 
if(x>=200):
    print(x-d)
else:
	print("sem desconto")
		


-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:24:53) 
-- CODE:
x=float(input("preco:"))
d=x*5//100 
y= x-d
if(x>=200):
    print(x-d)
	print(round(y,2))	
else:
	print("sem desconto")
		


-- EXECUTION TIME:
0.179952
-- ERROR:
  File "/home/codebench/codes/1635/869/main.py", line 6
    print(round(y,2))	
                     ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:24:55) 
-- CODE:
x=float(input("preco:"))
d=x*5//100 
y= x-d
if(x>=200):
    print(x-d)
	print(round(y,2))	
else:
	print("sem desconto")
		


-- ERROR:
File "XXXX", line 6
    print(round(y,2))	
                     ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:25:04) 
-- CODE:
x=float(input("preco:"))
d=x*5//100 
y= x-d
if(x>=200):
    print(x-d)
	
else:
	print("sem desconto")
		


-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:25:41) 
-- CODE:
x=float(input("preco:"))
d=x*5//100 

if(x>=200):
    print(round(x-d,2)
	
else:
	print("sem desconto")
		


-- EXECUTION TIME:
0.12219
-- ERROR:
  File "/home/codebench/codes/1635/869/main.py", line 7
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:25:43) 
-- CODE:
x=float(input("preco:"))
d=x*5//100 

if(x>=200):
    print(round(x-d,2)
	
else:
	print("sem desconto")
		


-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:25:55) 
-- CODE:
x=float(input("preco:"))
d=x*5//100 

if(x>=200):
    print(x-d)
	
else:
	print("sem desconto")
		


-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:26:38) 
-- CODE:
x=float(input("preco:"))
d=x*5//100 
y= x-d
if(x>=200):
    print(x-d)
	
else:
	print("sem desconto")
	
	print(y)
		


-- EXECUTION TIME:
0.155954
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:26:46) 
-- CODE:
x=float(input("preco:"))
d=x*5//100 
y= x-d
if(x>=200):
    print(x-d)
	
else:
	print("sem desconto")
	
	print(y)
		


-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:27:07) 
-- CODE:
x=float(input("preco:"))
d=x*5//100 
y= x-d
if(x>=200):
    print(x-d)
	
else:
	print("sem desconto")
	
	print(round(y,x)
		


-- EXECUTION TIME:
0.225952
-- ERROR:
  File "/home/codebench/codes/1635/869/main.py", line 13
    
    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:27:09) 
-- CODE:
x=float(input("preco:"))
d=x*5//100 
y= x-d
if(x>=200):
    print(x-d)
	
else:
	print("sem desconto")
	
	print(round(y,x)
		


-- ERROR:
File "XXXX", line 13
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:27:32) 
-- CODE:
x=float(input("preco:"))
d=x*5//100 
y= x-d
if(x>=200):
    print(x-d)
	
else:
	print("sem desconto")
	

		


-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:28:51) 
-- CODE:
x=float(input("preco:"))
d=x*5//100 
print(d)
y=x-d
if(x>=200):
    print(round(y,2))
	
else:
	print("sem desconto")
	

		


-- EXECUTION TIME:
0.184429
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
10.0
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
10.0
190.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:28:54) 
-- CODE:
x=float(input("preco:"))
d=x*5//100 
print(d)
y=x-d
if(x>=200):
    print(round(y,2))
	
else:
	print("sem desconto")
	

		


-- OUTPUT:
10.0
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:29:16) 
-- CODE:
x=float(input("preco:"))
d=x*5//100 
y=x-d
if(x>=200):
    print(round(y,2))
	
else:
	print("sem desconto")
	

		


-- EXECUTION TIME:
0.174547
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:29:17) 
-- CODE:
x=float(input("preco:"))
d=x*5//100 
y=x-d
if(x>=200):
    print(round(y,2))
	
else:
	print("sem desconto")
	

		


-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:30:57) 
-- CODE:
x=float(input("preco:"))
d=x*5//100 
y=x-d
if(x>=200):
    print(round(y,2))
	
else:
	print("sem desconto")
	

		


-- EXECUTION TIME:
0.126469
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:30:58) 
-- CODE:
x=float(input("preco:"))
d=x*5//100 
y=x-d
if(x>=200):
    print(round(y,2))
	
else:
	print("sem desconto")
	

		


-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:31:33) 
-- CODE:
x=float(input("preco:"))
d=x*5//100 
y=x-d
if(x>=200):
    print(round(y,2))
	
else:
	print("sem desconto")
	

		


-- EXECUTION TIME:
0.144916
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:31:35) 
-- CODE:
x=float(input("preco:"))
d=x*5//100 
y=x-d
if(x>=200):
    print(round(y,2))
	
else:
	print("sem desconto")
	

		


-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:32:23) 
-- CODE:
x=float(input("preco:"))
d=x*5//100 
y=x-d
if(x>=200):
    print(round(y,2))
	
else:
	print("sem desconto")
	

		


-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:32:45) 
-- CODE:
x=float(input("preco:"))
d=x*5//100 
y=x-d
if(x>=200):
    print(round(y,2))
	
else:
	print("sem desconto")
	

		


-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:33:33) 
-- CODE:
x=float(input("preco:"))
d=x*5//100 
y=x-d
if(x>=200.00):
    print(round(y,2))
	
else:
	print("sem desconto")
	

		


-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:33:41) 
-- CODE:
x=float(input("preco:"))
d=x*5//100 
y=x-d
if(x>=200.00):
    print(round(y,2))
	
else:
	print("sem desconto")
	

		


-- EXECUTION TIME:
0.232759
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:33:52) 
-- CODE:
x=float(input("preco:"))
d=x*5//100.00 
y=x-d
if(x>=200.00):
    print(round(y,2))
	
else:
	print("sem desconto")
	

		


-- EXECUTION TIME:
0.209763
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:33:54) 
-- CODE:
x=float(input("preco:"))
d=x*5//100.00 
y=x-d
if(x>=200.00):
    print(round(y,2))
	
else:
	print("sem desconto")
	

		


-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:34:36) 
-- CODE:
x=float(input("preco:"))
d=x*5//100
y=x-d
if(x>=200):
    print(round(y,2))
	
else:
	print("sem desconto")
	

		


-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:35:07) 
-- CODE:
x=float(input("preco:"))
d=x*5//100
y=x-d
if(x>=200):
    print(round(y,4))
	
else:
	print("sem desconto")
	

		


-- EXECUTION TIME:
0.116022
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:35:08) 
-- CODE:
x=float(input("preco:"))
d=x*5//100
y=x-d
if(x>=200):
    print(round(y,4))
	
else:
	print("sem desconto")
	

		


-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:35:18) 
-- CODE:
x=float(input("preco:"))
d=x*5//100
y=x-d
if(x>=200):
    print(round(y,2))
	
else:
	print("sem desconto")
	

		


-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:37:35) 
-- CODE:
x=float(input("preco:"))
d=x*5//100
y=x-d
if(x>=200):
    print(round(y,2))
	
else:
	print("sem desconto")
	

		


-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:38:51) 
-- CODE:
x=float(input("preco:"))
d=x*5//100
y=x-d
if(x>=200):
    print(round(y,2))
	
else:
	print(round(x,2))
	

		


-- EXECUTION TIME:
0.121777
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:38:55) 
-- CODE:
x=float(input("preco:"))
d=x*5//100
y=x-d
if(x>=200):
    print(round(y,2))
	
else:
	print(round(x,2))
	

		


-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:39:03) 
-- CODE:
x=float(input("preco:"))
d=x*5//100
y=x-d
if(x>=200):
    print(round(y,2))
	
else:
	print(round(x,2))
	

		


-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:40:14) 
-- CODE:
x=float(input("preco:"))
d=x*5//100
y=x-d
if(x>=200):
    print(round(y,2))
else:
	print(round(x,2))
-- EXECUTION TIME:
0.158142
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:40:35) 
-- CODE:
x=float(input("preco:"))
d=x*5//100
y=x-d
if(x>=200):
   print(round(y,2))
else:
	print(round(x,2))
-- EXECUTION TIME:
0.140584
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:41:54) 
-- CODE:
x=float(input("preco:"))
d=x*5/100
y=x-d
if(x>=200):
   print(round(y,2))
else:
	print(round(x,2))
-- EXECUTION TIME:
0.150082
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
